# reddit-gtk

./: .buildconfig  .gitignore  meson.build  org.gnome.Reddit-App.json  org.gnome.Reddit-App.json~
data/: meson.build  org.gnome.Reddit-App.appdata.xml.in  org.gnome.Reddit-App.desktop.in  org.gnome.Reddit-App.gschema.xml
po/: POTFILES  meson.build
src/: .goutputstream-XQBKSZ  api.vala  cardpost.ui  cardpost.vala  comment.ui  comment.vala  comment_model.vala  controller.vala  downloader.vala  main.vala  meson.build  post.ui  post.vala  post_model.vala  post_popover.ui  post_popover.vala  reddit-app.gresource.xml  store.vala  utils.vala  window.ui  window.vala
